--- a/main.css
+++ b/main.css
@@ -1,87 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    list-style-type: none;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  list-style-type: none;
+  text-decoration: none;
 }
 
-.container{
-    padding-left: 100px;
-    padding-right: 100px;
+.container {
+  padding-left: 100px;
+  padding-right: 100px;
 }
 .header {
-    background-color: #1f2937;
+  background-color: #1f2937;
 }
-.header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.header .container .logo{
-    text-transform: capitalize;
-    font-size: 24px;
-    color: #f9f8fa;
+.header .container .logo {
+  text-transform: capitalize;
+  font-size: 24px;
+  color: #f9f8fa;
 }
-.header .container nav ul{
-    display: flex;
-    align-items: center;
+.header .container nav ul {
+  display: flex;
+  align-items: center;
 }
 .header .container nav ul li {
-    margin-right: 15px;
+  margin-right: 15px;
 }
-.header .container nav a{
-    color: #e5e7eb;
-    font-size: 18px;
+.header .container nav a {
+  color: #e5e7eb;
+  font-size: 18px;
 }
 /* End header */
 /* Start landing */
-.landing{
-    background-color: #1f2937;
+.landing {
+  background-color: #1f2937;
 }
 .landing .container {
-    padding-top: 60px;
-    padding-bottom: 120px;
-    display: flex;
+  padding-top: 60px;
+  padding-bottom: 120px;
+  display: flex;
 }
 .landing .container .text {
-    margin-right: 60px;
+  margin-right: 60px;
 }
 .landing .container .text h1 {
-    margin-bottom: 5px;
-    font-size: 48px;
-    font-weight: 900;
-    color: #f9f8fa ;
+  margin-bottom: 5px;
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9f8fa;
 }
 .landing .container .text p {
-    font-size: 18px;
-    color: #e5e7eb;
-    opacity: .5;
-    margin-bottom: 5px;
+  font-size: 18px;
+  color: #e5e7eb;
+  opacity: 0.5;
+  margin-bottom: 5px;
 }
 .landing .container .text button {
-    border: none;
-    background-color: #3882f6;
-    color: white;
-    padding: 10px 30px;
-    border-radius: 6px;
+  border: none;
+  background-color: #3882f6;
+  color: white;
+  padding: 10px 30px;
+  border-radius: 6px;
 }
 .landing .container .placeholder {
-    width: 1000px;
-    height: 200px;
-    opacity: .5;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 1000px;
+  height: 200px;
+  opacity: 0.5;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .landing .container .placeholder p {
-    color: black;
-    opacity: .8;
+  color: black;
+  opacity: 0.8;
 }
 /* End landing */
+/* Start info */
+.info .container {
+  padding-right: 120px;
+  padding-left: 120px;
+  margin-bottom: 60px;
+}
+.info .container h2 {
+  color: #1f2937;
+  font-size: 36px;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  font-weight: 900;
+  text-align: center;
+}
+.info .container .cards {
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
+  justify-content: center;
+  gap: 50px;
+  text-align: center;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.info .container .cards .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.info .container .cards .card div {
+    width: 120px;
+    height: 120px;
+    border: 3px solid #3882f6;
+    display: flex;
+    border-radius: 15px;
+    margin-bottom: 10px;
+}
+/* End info */
+/* Start quote */
+.quote {
+    background-color: #e5e7eb;
+    padding: 100px 300px;
+}
+.quote p {
+    color: #1f2937;
+    opacity: .7;
+    font-style: italic;
+    font-size: 32px;
+}
+.quote h3 {
+    display: flex;
+    justify-content: flex-end;
+    color: #1f2937;
+    font-size: 24px;
+}
+/* End quote */
+/* Start call */
+.call .container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.call .container .form {
+    background-color: #3882f6;
+    padding: 30px 70px;
+    border-radius: 6px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.call .container .form button {
+    border: 2px solid #f9f8fa;
+    background-color: transparent;
+    width: 100px;
+    height: 30px;
+    color: #f9f8fa;
+    border-radius: 6px;
+    font-weight: bold;
+}
+/* End call */
+/* Start footer */
+.footer {
+    background-color: #1f2937;
+    padding: 30px;
+    color: #f9f8fa;
+    text-align: center;
+}
+/* End footer */
